--- a/packages.bib
+++ b/packages.bib
@@ -87,6 +87,22 @@ Tools},
   url = {https://CRAN.R-project.org/package=janitor},
 }
 
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2021},
+  note = {R package version 1.3.4},
+  url = {https://CRAN.R-project.org/package=kableExtra},
+}
+
+@Manual{R-knitr,
+  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  author = {Yihui Xie},
+  year = {2023},
+  note = {R package version 1.42},
+  url = {https://yihui.org/knitr/},
+}
+
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
@@ -282,6 +298,27 @@ Tools},
   volume = {13},
   issue = {1},
   pages = {570-580},
+}
+
+@Book{knitr2015,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.org/knitr/},
+}
+
+@InCollection{knitr2014,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
 }
 
 @Article{lubridate2011,
